use axum::{extract::State, Json, http::StatusCode};
use serde::{Deserialize, Serialize};
#[cfg(debug_assertions)]
use serde_json;
use rusqlite::{self, params, Connection};
use argon2::{
    password_hash::{
        self, rand_core::OsRng, PasswordHash, PasswordHasher, PasswordVerifier, SaltString,
    },
    Argon2,
};
use utoipa::ToSchema;
use utoipa_axum::{router::OpenApiRouter, routes};

use crate::soyul::session::{get_user_id_by_session, generate_session_key, insert_session, SessionStore};

//
// ê³µí†µ ì—ëŸ¬ íƒ€ì…
//
enum UserError {
    PasswordHash(password_hash::Error),
    Database(rusqlite::Error),
}

//
// Argon2 ìœ í‹¸ í•¨ìˆ˜
//
fn argon2_hash(input: &str) -> std::result::Result<String, password_hash::Error> {
    let salt = SaltString::generate(&mut OsRng);
    let algorithm = Argon2::default();

    Ok(algorithm.hash_password(input.as_bytes(), &salt)?.to_string())
}

fn verify_argon2(input: &str, hashed: &str) -> std::result::Result<bool, password_hash::Error> {
    let algorithm = Argon2::default();
    let password_hash = PasswordHash::new(&hashed)?;

    Ok(algorithm
        .verify_password(input.as_bytes(), &password_hash)
        .is_ok())
}

//
// DB í•¨ìˆ˜ë“¤
//
#[derive(Serialize, ToSchema, Debug)]
pub struct UserProfile {
    pub username: Option<String>, // NULL ê°€ëŠ¥ì„± ìˆìœ¼ë‹ˆê¹Œ Option
    pub rating: i32,
    // ë‚˜ì¤‘ì— í•„ë“œ ë” ì¶”ê°€ ê°€ëŠ¥ (ì˜ˆ: created_at, bio ë“±)
}
impl UserProfile {
    pub fn convert_session2proto(self) -> crate::proto::badukboardproto::UserInfo {
        crate::proto::badukboardproto::UserInfo {
            user_name: match self.username {
                Some(name) => name,
                None => "".to_string(),
            },
            rating: self.rating as u32
        }
    }
}

/// user_idë¡œ ìœ ì € í”„ë¡œí•„ ê°€ì ¸ì˜¤ê¸°
pub fn get_user_profile_by_id(
    conn: &Connection,
    user_id: u64,
) -> rusqlite::Result<Option<UserProfile>> {
    let mut stmt = conn.prepare(
        "SELECT username, rating
         FROM users
         WHERE id = ?1",
    )?;

    let result = stmt.query_row([user_id as i64], |row| {
        Ok(UserProfile {
            username: row.get(0)?,
            rating: row.get(1)?,
        })
    });

    match result {
        Ok(profile) => Ok(Some(profile)),
        Err(rusqlite::Error::QueryReturnedNoRows) => Ok(None),
        Err(e) => Err(e),
    }
}

/// íšŒì›ê°€ì…: DBì— ì‚¬ìš©ì ì¶”ê°€ + ìƒì„±ëœ user_id ë¦¬í„´
fn signup_db(
    conn: &Connection,
    login_id: &str,
    password_plain: &str,
    username: &str,
) -> std::result::Result<u64, UserError> {
    let hashed = match argon2_hash(password_plain) {
        Ok(hash) => hash,
        Err(e) => return Err(UserError::PasswordHash(e)),
    };

    if let Err(e) = conn.execute(
        "INSERT INTO users (login_id, password_hash, username) VALUES (?1, ?2, ?3)",
        params![login_id, hashed, username],
    ) {
        return Err(UserError::Database(e));
    }

    // ë°©ê¸ˆ INSERTëœ í–‰ì˜ rowid = user_id (ê³ ìœ ë²ˆí˜¸)
    let user_id = conn.last_insert_rowid() as u64;
    Ok(user_id)
}

/// ë¡œê·¸ì¸: ë¹„ë°€ë²ˆí˜¸ ê²€ì¦ + ì„±ê³µ ì‹œ user_id ë¦¬í„´
fn login_db(
    conn: &Connection,
    login_id: &str,
    password_plain: &str,
) -> std::result::Result<Option<u64>, rusqlite::Error> {
    let mut stmt = conn.prepare("SELECT id, password_hash FROM users WHERE login_id = ?1")?;

    let row = stmt.query_row([login_id], |row| {
        let id: u64 = row.get(0)?;
        let hash: String = row.get(1)?;
        Ok((id, hash))
    });

    match row {
        Ok((user_id, stored_hash)) => {
            let ok = verify_argon2(password_plain, &stored_hash).unwrap_or(false);
            if ok {
                Ok(Some(user_id))
            } else {
                Ok(None)
            }
        }
        // í•´ë‹¹ login_id ì—†ìŒ
        Err(rusqlite::Error::QueryReturnedNoRows) => Ok(None),
        Err(e) => Err(e),
    }
}

//
// OpenAPIìš© ìš”ì²­/ì‘ë‹µ êµ¬ì¡°ì²´
//
#[derive(Deserialize, ToSchema)]
pub struct SignupForm {
    /// ë¡œê·¸ì¸ì— ì‚¬ìš©í•  ì•„ì´ë””
    pub login_id: String,
    /// í‰ë¬¸ ë¹„ë°€ë²ˆí˜¸
    pub password: String,
    /// ì‚¬ìš©ì ì´ë¦„ (ë‹‰ë„¤ì„)
    pub username: String,
}

#[derive(Deserialize, ToSchema)]
pub struct LoginForm {
    /// ë¡œê·¸ì¸ì— ì‚¬ìš©í•  ì•„ì´ë””
    pub login_id: String,
    /// í‰ë¬¸ ë¹„ë°€ë²ˆí˜¸
    pub password: String,
}

#[derive(Serialize, ToSchema)]
pub struct ApiResponse {
    pub success: bool,
    pub message: String,
}

// ğŸ”¹ ë¡œê·¸ì¸ ì‘ë‹µ: ì„¸ì…˜í‚¤ í¬í•¨
#[derive(Serialize, ToSchema)]
pub struct LoginResponse {
    pub success: bool,
    pub message: String,
    pub session_key: Option<String>,
}

// ğŸ”¹ ì„¸ì…˜ ì²´í¬ìš© ìš”ì²­/ì‘ë‹µ (ì„¸ì…˜í‚¤ â†’ user_id í™•ì¸)
#[derive(Deserialize, ToSchema)]
pub struct SessionCheckForm {
    pub session_key: String,
}

#[derive(Serialize, ToSchema)]
pub struct UserProfileResponse {
    pub success: bool,
    pub message: String,
    pub user: Option<UserProfile>,
}

//
// API í•¸ë“¤ëŸ¬
//
#[utoipa::path(
    post,
    path = "/api/signup",
    tag = "auth",
    request_body = SignupForm,
    responses(
        (status = 201, description = "ìœ ì € ìƒì„± ì„±ê³µ", body = ApiResponse),
        (status = 400, description = "ì´ë¯¸ ì¡´ì¬í•˜ëŠ” ì•„ì´ë”” ë˜ëŠ” ì˜ëª»ëœ ìš”ì²­", body = ApiResponse),
        (status = 500, description = "ì„œë²„ ë‚´ë¶€ ì˜¤ë¥˜", body = ApiResponse),
    )
)]
pub async fn signup(Json(form): Json<SignupForm>) -> (StatusCode, Json<ApiResponse>) {
    let conn = match Connection::open("mydb.db") {
        Ok(conn) => conn,
        Err(e) => {
            eprintln!("âŒ íšŒì›ê°€ì… ì‹¤íŒ¨(íŒŒì¼/DB ì˜¤í”ˆ ì—ëŸ¬): {}", e);
            return (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(ApiResponse {
                    success: false,
                    message: "ë°ì´í„°ë² ì´ìŠ¤ ì—°ê²° ì˜¤ë¥˜".into(),
                }),
            );
        }
    };

    // users í…Œì´ë¸” ì—†ìœ¼ë©´ ìƒì„±
    if let Err(e) = conn.execute(
        "CREATE TABLE IF NOT EXISTS users (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            login_id TEXT UNIQUE NOT NULL,
            password_hash TEXT NOT NULL,
            username TEXT UNIQUE,
            rating INTEGER DEFAULT 1500
        )",
        [],
    ) {
        eprintln!("âŒ í…Œì´ë¸” ìƒì„± ì‹¤íŒ¨: {}", e);
        return (
            StatusCode::INTERNAL_SERVER_ERROR,
            Json(ApiResponse {
                success: false,
                message: "í…Œì´ë¸” ìƒì„± ì‹¤íŒ¨".into(),
            }),
        );
    };

    match signup_db(&conn, &form.login_id, &form.password, &form.username) {
        Ok(user_id) => {
            println!("âœ… íšŒì›ê°€ì… ì„±ê³µ, user_id = {}", user_id);
            (
                StatusCode::CREATED,
                Json(ApiResponse {
                    success: true,
                    // ë°œí‘œìš©/ë””ë²„ê·¸ìš©ìœ¼ë¡œ user_idê¹Œì§€ ë©”ì‹œì§€ì— í¬í•¨
                    message: format!("íšŒì›ê°€ì… ì„±ê³µ (user_id = {})", user_id),
                }),
            )
        }
        Err(UserError::PasswordHash(e)) => {
            eprintln!("âŒ ë¹„ë°€ë²ˆí˜¸ í•´ì‹œ ì‹¤íŒ¨: {}", e);
            (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(ApiResponse {
                    success: false,
                    message: "ë¹„ë°€ë²ˆí˜¸ í•´ì‹œ ì‹¤íŒ¨".into(),
                }),
            )
        }
        Err(UserError::Database(e)) => {
            eprintln!("âŒ íšŒì›ê°€ì… ì‹¤íŒ¨(ì¤‘ë³µ ë“±): {}", e);
            (
                StatusCode::BAD_REQUEST,
                Json(ApiResponse {
                    success: false,
                    message: "ì´ë¯¸ ì¡´ì¬í•˜ëŠ” ì•„ì´ë””ì´ê±°ë‚˜ ì˜ëª»ëœ ìš”ì²­ì…ë‹ˆë‹¤.".into(),
                }),
            )
        }
    }
}

#[utoipa::path(
    post,
    path = "/api/login",
    tag = "auth",
    request_body = LoginForm,
    responses(
        (status = 200, description = "ë¡œê·¸ì¸ ì„±ê³µ", body = LoginResponse),
        (status = 400, description = "ì•„ì´ë”” ë˜ëŠ” ë¹„ë°€ë²ˆí˜¸ê°€ í‹€ë¦¼", body = LoginResponse),
        (status = 500, description = "ì„œë²„ ë‚´ë¶€ ì˜¤ë¥˜", body = LoginResponse),
    )
)]
pub async fn login(
    State(session_store): State<SessionStore>,
    Json(form): Json<LoginForm>,
) -> (StatusCode, Json<LoginResponse>) {
    let conn = match Connection::open("mydb.db") {
        Ok(conn) => conn,
        Err(e) => {
            eprintln!("âš ï¸ ë¡œê·¸ì¸ ì—ëŸ¬(DB ì˜¤í”ˆ ì‹¤íŒ¨): {}", e);
            return (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(LoginResponse {
                    success: false,
                    message: "ë°ì´í„°ë² ì´ìŠ¤ ì—°ê²° ì˜¤ë¥˜".into(),
                    session_key: None,
                }),
            );
        }
    };

    match login_db(&conn, &form.login_id, &form.password) {
        // ğŸ”¹ ë¡œê·¸ì¸ ì„±ê³µ + user_id í™•ë³´
        Ok(Some(user_id)) => {
            println!("âœ… ë¡œê·¸ì¸ ì„±ê³µ, user_id = {}", user_id);

            // 1) ì„¸ì…˜í‚¤ ìƒì„±
            let session_key = generate_session_key();

            // 2) ì„œë²„ ë©”ëª¨ë¦¬ SessionStoreì— (ì„¸ì…˜í‚¤ -> user_id) ì €ì¥
            insert_session(&session_store, session_key.clone(), user_id).await;

            // 3) ì‘ë‹µ JSON ìƒì„±
            let resp = LoginResponse {
                success: true,
                message: "ë¡œê·¸ì¸ ì„±ê³µ".into(),
                session_key: Some(session_key),
            };

            // ğŸ” ë””ë²„ê¹…: ì‘ë‹µ JSONì„ ë¬¸ìì—´ë¡œ ì°ê¸°
            #[cfg(debug_assertions)]
            let json_str = serde_json::to_string(&resp).unwrap();
            #[cfg(debug_assertions)]
            println!("[DEBUG] login response JSON = {}", json_str);

            (StatusCode::OK, Json(resp))
        }
        // ì•„ì´ë”” ì—†ìŒ or ë¹„ë°€ë²ˆí˜¸ í‹€ë¦¼
        Ok(None) => {
            println!("âŒ ë¡œê·¸ì¸ ì‹¤íŒ¨: ì•„ì´ë”” ë˜ëŠ” ë¹„ë°€ë²ˆí˜¸ í‹€ë¦¼");
            let resp = LoginResponse {
                success: false,
                message: "ì•„ì´ë”” ë˜ëŠ” ë¹„ë°€ë²ˆí˜¸ê°€ ì˜¬ë°”ë¥´ì§€ ì•ŠìŠµë‹ˆë‹¤.".into(),
                session_key: None,
            };
            #[cfg(debug_assertions)]
            let json_str = serde_json::to_string(&resp).unwrap();
            #[cfg(debug_assertions)]
            println!("[DEBUG] login response JSON = {}", json_str);

            (StatusCode::BAD_REQUEST, Json(resp))
        }
        Err(e) => {
            eprintln!("âš ï¸ ë¡œê·¸ì¸ ì—ëŸ¬: {}", e);
            let resp = LoginResponse {
                success: false,
                message: "ë¡œê·¸ì¸ ì²˜ë¦¬ ì¤‘ ì˜¤ë¥˜ê°€ ë°œìƒí–ˆìŠµë‹ˆë‹¤.".into(),
                session_key: None,
            };
            #[cfg(debug_assertions)]
            let json_str = serde_json::to_string(&resp).unwrap();
            #[cfg(debug_assertions)]
            println!("[DEBUG] login response JSON = {}", json_str);

            (StatusCode::INTERNAL_SERVER_ERROR, Json(resp))
        }
    }
}

#[utoipa::path(
    post,
    path = "/api/session_check",
    tag = "auth",
    request_body = SessionCheckForm,
    responses(
        (status = 200, description = "ì„¸ì…˜ ì¡´ì¬ ì—¬ë¶€ í™•ì¸"),
        (status = 400, description = "ì„¸ì…˜ í‚¤ê°€ ì˜¬ë°”ë¥´ì§€ ì•ŠìŒ"),
    )
)]
pub async fn session_check(
    State(session_store): State<SessionStore>,
    Json(form): Json<SessionCheckForm>,
) -> StatusCode {
    let user_id_opt = get_user_id_by_session(&session_store, &form.session_key).await;

    // ğŸ” ë””ë²„ê¹…: ì„¸ì…˜í‚¤ â†’ user_id ë§¤í•‘ ì¶œë ¥
    #[cfg(debug_assertions)]
    match user_id_opt {
        Some(uid) => println!(
            "[DEBUG] session_check: key(prefix) = {}, user_id = {}",
            &form.session_key[..16.min(form.session_key.len())],
            uid
        ),
        None => println!(
            "[DEBUG] session_check: key(prefix) = {}, NOT FOUND",
            &form.session_key[..16.min(form.session_key.len())],
        ),
    };

    if user_id_opt.is_some() {
        StatusCode::OK
    } else {
        StatusCode::BAD_REQUEST
    }
}

#[utoipa::path(
    post,
    path = "/api/user/profile",
    tag = "user",
    request_body = SessionCheckForm,
    responses(
        (status = 200, description = "ìœ ì € ì •ë³´ ì¡°íšŒ ì„±ê³µ", body = UserProfileResponse),
        (status = 404, description = "í•´ë‹¹ ìœ ì € ì—†ìŒ", body = UserProfileResponse),
        (status = 500, description = "ì„œë²„ ë‚´ë¶€ ì˜¤ë¥˜", body = UserProfileResponse),
    )
)]
pub async fn get_user_profile_handler(
    State(session_store): State<SessionStore>,
    Json(form): Json<SessionCheckForm>,
) -> (StatusCode, Json<UserProfileResponse>) {
    let user_id_opt = get_user_id_by_session(&session_store, &form.session_key).await;

    if user_id_opt.is_none() {
        return (
            StatusCode::BAD_REQUEST,
            Json(UserProfileResponse {
                success: false,
                message: "ì„¸ì…˜ í‚¤ê°€ ì˜¬ë°”ë¥´ì§€ ì•ŠìŠµë‹ˆë‹¤.".into(),
                user: None,
            }),
        );
    }

    let conn = match Connection::open("mydb.db") {
        Ok(conn) => conn,
        Err(e) => {
            eprintln!("âš ï¸ ìœ ì € ì •ë³´ ì¡°íšŒ(DB ì˜¤í”ˆ ì‹¤íŒ¨): {}", e);
            return (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(UserProfileResponse {
                    success: false,
                    message: "ë°ì´í„°ë² ì´ìŠ¤ ì—°ê²° ì˜¤ë¥˜".into(),
                    user: None,
                }),
            );
        }
    };

    match get_user_profile_by_id(&conn, user_id_opt.unwrap()) {
        Ok(Some(profile)) => {
            println!("âœ… ìœ ì € ì •ë³´ ì¡°íšŒ ì„±ê³µ: {:?}", profile);
            (
                StatusCode::OK,
                Json(UserProfileResponse {
                    success: true,
                    message: "ìœ ì € ì •ë³´ ì¡°íšŒ ì„±ê³µ".into(),
                    user: Some(profile),
                }),
            )
        }
        Ok(None) => {
            eprintln!("âŒ ìœ ì € ì •ë³´ ì—†ìŒ");
            (
                StatusCode::NOT_FOUND,
                Json(UserProfileResponse {
                    success: false,
                    message: "í•´ë‹¹ ìœ ì €ë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤.".into(),
                    user: None,
                }),
            )
        }
        Err(e) => {
            eprintln!("âš ï¸ ìœ ì € ì •ë³´ ì¡°íšŒ ì¤‘ ì—ëŸ¬: {}", e);
            (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(UserProfileResponse {
                    success: false,
                    message: "ìœ ì € ì •ë³´ ì¡°íšŒ ì¤‘ ì˜¤ë¥˜ê°€ ë°œìƒí–ˆìŠµë‹ˆë‹¤.".into(),
                    user: None,
                }),
            )
        }
    }
}

// ğŸ”¹ ë‹‰ë„¤ì„ ë³€ê²½ ìš”ì²­
#[derive(Deserialize, ToSchema)]
pub struct UpdateUsernameForm {
    pub session_key: String,
    pub new_username: String,
}

// ğŸ”¹ ë¹„ë°€ë²ˆí˜¸ ë³€ê²½ ìš”ì²­
#[derive(Deserialize, ToSchema)]
pub struct UpdatePasswordForm {
    pub session_key: String,
    pub current_password: String,
    pub new_password: String,
}

#[utoipa::path(
    post,
    path = "/api/user/update-username",
    tag = "user",
    request_body = UpdateUsernameForm,
    responses(
        (status = 200, description = "ë‹‰ë„¤ì„ ë³€ê²½ ì„±ê³µ", body = ApiResponse),
        (status = 400, description = "ì˜ëª»ëœ ìš”ì²­ ë˜ëŠ” ì´ë¯¸ ì‚¬ìš© ì¤‘ì¸ ë‹‰ë„¤ì„", body = ApiResponse),
        (status = 500, description = "ì„œë²„ ë‚´ë¶€ ì˜¤ë¥˜", body = ApiResponse),
    )
)]
pub async fn update_username(
    State(session_store): State<SessionStore>,
    Json(form): Json<UpdateUsernameForm>,
) -> (StatusCode, Json<ApiResponse>) {
    let user_id_opt = get_user_id_by_session(&session_store, &form.session_key).await;

    if user_id_opt.is_none() {
        return (
            StatusCode::BAD_REQUEST,
            Json(ApiResponse {
                success: false,
                message: "ì„¸ì…˜ í‚¤ê°€ ì˜¬ë°”ë¥´ì§€ ì•ŠìŠµë‹ˆë‹¤.".into(),
            }),
        );
    }

    let user_id = user_id_opt.unwrap();

    let conn = match Connection::open("mydb.db") {
        Ok(conn) => conn,
        Err(e) => {
            eprintln!("âŒ DB ì˜¤í”ˆ ì‹¤íŒ¨: {}", e);
            return (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(ApiResponse {
                    success: false,
                    message: "ë°ì´í„°ë² ì´ìŠ¤ ì—°ê²° ì˜¤ë¥˜".into(),
                }),
            );
        }
    };

    match conn.execute(
        "UPDATE users SET username = ?1 WHERE id = ?2",
        params![form.new_username, user_id as i64],
    ) {
        Ok(_) => {
            println!("âœ… ë‹‰ë„¤ì„ ë³€ê²½ ì„±ê³µ: user_id={}, new_username={}", user_id, form.new_username);
            (
                StatusCode::OK,
                Json(ApiResponse {
                    success: true,
                    message: "ë‹‰ë„¤ì„ì´ ë³€ê²½ë˜ì—ˆìŠµë‹ˆë‹¤.".into(),
                }),
            )
        }
        Err(e) => {
            eprintln!("âŒ ë‹‰ë„¤ì„ ë³€ê²½ ì‹¤íŒ¨: {}", e);
            (
                StatusCode::BAD_REQUEST,
                Json(ApiResponse {
                    success: false,
                    message: "ë‹‰ë„¤ì„ ë³€ê²½ ì‹¤íŒ¨ (ì´ë¯¸ ì‚¬ìš© ì¤‘ì¼ ìˆ˜ ìˆìŠµë‹ˆë‹¤)".into(),
                }),
            )
        }
    }
}

#[utoipa::path(
    post,
    path = "/api/user/update-password",
    tag = "user",
    request_body = UpdatePasswordForm,
    responses(
        (status = 200, description = "ë¹„ë°€ë²ˆí˜¸ ë³€ê²½ ì„±ê³µ", body = ApiResponse),
        (status = 400, description = "í˜„ì¬ ë¹„ë°€ë²ˆí˜¸ê°€ ì˜¬ë°”ë¥´ì§€ ì•ŠìŒ", body = ApiResponse),
        (status = 500, description = "ì„œë²„ ë‚´ë¶€ ì˜¤ë¥˜", body = ApiResponse),
    )
)]
pub async fn update_password(
    State(session_store): State<SessionStore>,
    Json(form): Json<UpdatePasswordForm>,
) -> (StatusCode, Json<ApiResponse>) {
    let user_id_opt = get_user_id_by_session(&session_store, &form.session_key).await;

    if user_id_opt.is_none() {
        return (
            StatusCode::BAD_REQUEST,
            Json(ApiResponse {
                success: false,
                message: "ì„¸ì…˜ í‚¤ê°€ ì˜¬ë°”ë¥´ì§€ ì•ŠìŠµë‹ˆë‹¤.".into(),
            }),
        );
    }

    let user_id = user_id_opt.unwrap();

    let conn = match Connection::open("mydb.db") {
        Ok(conn) => conn,
        Err(e) => {
            eprintln!("âŒ DB ì˜¤í”ˆ ì‹¤íŒ¨: {}", e);
            return (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(ApiResponse {
                    success: false,
                    message: "ë°ì´í„°ë² ì´ìŠ¤ ì—°ê²° ì˜¤ë¥˜".into(),
                }),
            );
        }
    };

    // í˜„ì¬ ë¹„ë°€ë²ˆí˜¸ í™•ì¸
    let mut stmt = match conn.prepare("SELECT password_hash FROM users WHERE id = ?1") {
        Ok(stmt) => stmt,
        Err(e) => {
            eprintln!("âŒ ì¿¼ë¦¬ ì¤€ë¹„ ì‹¤íŒ¨: {}", e);
            return (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(ApiResponse {
                    success: false,
                    message: "ì„œë²„ ì˜¤ë¥˜".into(),
                }),
            );
        }
    };

    let stored_hash: String = match stmt.query_row([user_id as i64], |row| row.get(0)) {
        Ok(hash) => hash,
        Err(e) => {
            eprintln!("âŒ ìœ ì € ì¡°íšŒ ì‹¤íŒ¨: {}", e);
            return (
                StatusCode::NOT_FOUND,
                Json(ApiResponse {
                    success: false,
                    message: "ìœ ì €ë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤.".into(),
                }),
            );
        }
    };

    // í˜„ì¬ ë¹„ë°€ë²ˆí˜¸ ê²€ì¦
    let is_valid = verify_argon2(&form.current_password, &stored_hash).unwrap_or(false);
    if !is_valid {
        return (
            StatusCode::BAD_REQUEST,
            Json(ApiResponse {
                success: false,
                message: "í˜„ì¬ ë¹„ë°€ë²ˆí˜¸ê°€ ì˜¬ë°”ë¥´ì§€ ì•ŠìŠµë‹ˆë‹¤.".into(),
            }),
        );
    }

    // ìƒˆ ë¹„ë°€ë²ˆí˜¸ í•´ì‹±
    let new_hash = match argon2_hash(&form.new_password) {
        Ok(hash) => hash,
        Err(e) => {
            eprintln!("âŒ ë¹„ë°€ë²ˆí˜¸ í•´ì‹± ì‹¤íŒ¨: {}", e);
            return (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(ApiResponse {
                    success: false,
                    message: "ë¹„ë°€ë²ˆí˜¸ ì²˜ë¦¬ ì˜¤ë¥˜".into(),
                }),
            );
        }
    };

    // ë¹„ë°€ë²ˆí˜¸ ì—…ë°ì´íŠ¸
    match conn.execute(
        "UPDATE users SET password_hash = ?1 WHERE id = ?2",
        params![new_hash, user_id as i64],
    ) {
        Ok(_) => {
            println!("âœ… ë¹„ë°€ë²ˆí˜¸ ë³€ê²½ ì„±ê³µ: user_id={}", user_id);
            (
                StatusCode::OK,
                Json(ApiResponse {
                    success: true,
                    message: "ë¹„ë°€ë²ˆí˜¸ê°€ ë³€ê²½ë˜ì—ˆìŠµë‹ˆë‹¤.".into(),
                }),
            )
        }
        Err(e) => {
            eprintln!("âŒ ë¹„ë°€ë²ˆí˜¸ ë³€ê²½ ì‹¤íŒ¨: {}", e);
            (
                StatusCode::INTERNAL_SERVER_ERROR,
                Json(ApiResponse {
                    success: false,
                    message: "ë¹„ë°€ë²ˆí˜¸ ë³€ê²½ ì‹¤íŒ¨".into(),
                }),
            )
        }
    }
}

pub fn login_router() -> OpenApiRouter<SessionStore> {
    OpenApiRouter::new()
        .routes(routes!(signup))
        .routes(routes!(login))
        .routes(routes!(session_check))
        .routes(routes!(get_user_profile_handler))
        .routes(routes!(update_username))
        .routes(routes!(update_password))
}
